fixed background overflow; added percentage

--- a/assets/css/sass/_main.scss
+++ b/assets/css/sass/_main.scss
@@ -13,12 +13,13 @@ input {
 }
 
 body {
-  overflow: visible !important;
-  background: -webkit-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
-  background: -moz-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
-  background: -ms-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
-  background: -o-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
-  background: linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  // overflow: visible !important;
+  background-image: -webkit-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background-image: -moz-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background-image: -ms-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background-image: -o-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background-image: linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background-attachment: fixed;
 }
 
 .site-wrapper {
@@ -233,4 +234,33 @@ md-list-item .md-avatar {
 		}
 	}
 	
+}
+
+.frac-input,
+.numRecs-input {
+	width: 70px !important;
+	padding-right: 20px !important;
+	text-align: right !important;
+
+}
+
+.frac-input ~ span {
+	display: inline-block;
+	margin-left: -20px !important;
+	line-height: 26px !important;
+	height: 50px;
+	margin-bottom: 30px;
+	color: gainsboro;
+}
+
+md-slider-container md-input-container input[type=number] {
+	color: #616161;
+	border-bottom-style: dotted;
+}
+
+md-slider-container>:last-child:not(md-slider) {
+	margin-left: -20px;
+	margin-bottom: 18px;
+	color: #616161;
+	font-size: 1.4rem;
 }
